plugins {
    id 'java'
}

group 'org.go.together'
version '1.0.1.SNAPSHOT'

sourceCompatibility = 13
targetCompatibility = 13

repositories {
    mavenCentral()
}

dependencies {
    compile(
            "org.springframework.boot:spring-boot-starter-security:${springBootVersion}",
            "com.h2database:h2:1.4.200",

            "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:${springCloudVersion}",
            "org.springframework.cloud:spring-cloud-starter-config:${springCloudVersion}",

            "io.jsonwebtoken:jjwt:${jsonWebTokenVersion}",

            "org.projectlombok:lombok:${lombokVersion}"
    )

    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    compile project(":auth-service-client")
    compile project(":user-service-client")
}